# KyykkaAnalysis

./: .gitignore  README.md
report/: commands.tex  main.tex  packages.sty
report/sections/: data.tex  motivation.tex
report/tikzfigures/: gamemodel.tikz  gammamodel.tikz  invgammamodel.tikz  throwmodel.tikz
scripts/: README.md  pyproject.toml  run.py
scripts/kyykkaanalysis/: __init__.py  __main__.py
scripts/kyykkaanalysis/data/: __init__.py  data_classes.py  data_description.py  data_reading.py
scripts/kyykkaanalysis/figures/: __init__.py  chains.py  cross_validation.py  data.py  fake_data.py  posterior.py  prior.py  utils.py
scripts/kyykkaanalysis/model/: __init__.py  distributions.py  inference.py  model_checks.py  modeling.py
