[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kyykkaanalysis"
authors = [
    {name = "Elias Räsänen"},
]
description = "Analysis of kyykka play times"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"
dependencies = [
    "arviz>=0.16.0",
    "kaleido>=0.2.1",
    "numpy>=1.26.0",
    "plotly>=5.17.0",
    "pymc>=5.10.0",
    "scipy>=1.11.4",
    "xarray>=2023.6.0",
]


[project.optional-dependencies]
dev = [
    "black",
]