[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kyykkaanalysis"
authors = [
    {name = "Elias Räsänen"},
]
description = "Analysis of kyykkä play times"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"
dependencies = [
    "arviz>=0.16.0",
    "blackjax>=1.0.0",
    "kaleido==0.2.1",   # Fixed to prevent https://github.com/plotly/Kaleido/issues/134
    "numpy>=1.26.0",
    "plotly>=5.17.0",
    "pymc>=5.10.0",
    "pytensor>=2.18.1",
    "scipy>=1.11.4",
    "structlog>=24.1.0",
    "xarray>=2023.6.0",
]


[project.optional-dependencies]
win = [ # Windows only
    "colorama>=0.4.6",  # For colorful logging
]
dev = [
    "pydot",    # For debugging pytensor graphs
    "rich",     # Improved exceptions
    "ruff",     # Combined linting and formatting
]

[tool.ruff]
[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "ANN101",
    "ANN401",
    "D202",
    "D212",
    "D413",
    "D415",
    "COM",
    "FA100",
    "FA102",
    "PD",
    "RET504",
    "TD002",
    "TD003",
    "TID252",
    "TRY003",
]